View Issue Details

IDProjectCategoryView StatusLast Update
0027944Open CASCADEOCCT:Visualizationpublic2016-12-09 16:38
Reporterkgv Assigned Toapn  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.1.0 
Target Version7.1.0Fixed in Version7.1.0 
Summary0027944: Visualization, V3d_View - filter duplicates within ::AddClipPlane()
DescriptionIt will be more safe if V3d_View::AddClipPlane() method will filter out duplicates within the clipping plane list. For instance, current implementation vclipplane relies on this method and erroneously adds the same plane several times by each call -set.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Relationships

child of 0027816 closedbugmaster Visualization - provide an API for overriding clipping planes list 

Activities

git

2016-10-09 22:00

administrator   ~0058509

Branch CR27944 has been created by kgv.

SHA-1: 06fdf63c6c634031d6dc143273f6ea20b1a09f20


Detailed log of new commits:

Author: kgv
Date: Sun Oct 9 21:59:58 2016 +0300

    0027944: Visualization, V3d_View - filter duplicates within ::AddClipPlane()

kgv

2016-10-09 22:00

developer   ~0058510

Please test the patch.

mkv

2016-10-11 14:21

tester   ~0058572

Dear BugMaster,
Branch CR27944 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 06fdf63c6c634031d6dc143273f6ea20b1a09f20

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 64 (64 on master)
Windows: 0 (0 on master)
MacOS : 1152

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 91081198 / 91117357 [-0.04%]
Total CPU difference: 19332.129999999845 / 19439.92000000002 [-0.55%]
products component :
Total MEMORY difference: 30025031 / 30002075 [+0.08%]
Total CPU difference: 5199.989999999963 / 5237.849999999958 [-0.72%]

Testing on Windows:
occt component :
Total MEMORY difference: 57231086 / 57241724 [-0.02%]
Total CPU difference: 19080.903512698627 / 18173.586096598698 [+4.99%]
products component :
Total MEMORY difference: 21277648 / 21241374 [+0.17%]
Total CPU difference: 5451.954148199984 / 5052.513587699945 [+7.91%]

There are no differences in images found by testdiff.

mkv

2016-10-11 14:21

tester   ~0058573

Dear BugMaster,
Branch CR27944 is TESTED.

git

2016-10-28 21:42

administrator   ~0059468

Branch CR27944 has been deleted by kgv.

SHA-1: 06fdf63c6c634031d6dc143273f6ea20b1a09f20

Related Changesets

occt: master b88b0cf7

2016-10-09 18:59:58

kgv


Committer: apn Details Diff
0027944: Visualization, V3d_View - filter duplicates within ::AddClipPlane() Affected Issues
0027944
mod - src/V3d/V3d_View_2.cxx Diff File

Issue History

Date Modified Username Field Change
2016-10-09 21:56 kgv New Issue
2016-10-09 21:56 kgv Assigned To => kgv
2016-10-09 22:00 git Note Added: 0058509
2016-10-09 22:00 kgv Note Added: 0058510
2016-10-09 22:00 kgv Assigned To kgv => bugmaster
2016-10-09 22:00 kgv Severity minor => trivial
2016-10-09 22:00 kgv Status new => resolved
2016-10-09 22:00 kgv Status resolved => reviewed
2016-10-09 22:00 kgv Relationship added child of 0027816
2016-10-10 13:19 mkv Assigned To bugmaster => mkv
2016-10-11 14:21 mkv Note Added: 0058572
2016-10-11 14:21 mkv Note Added: 0058573
2016-10-11 14:21 mkv Assigned To mkv => bugmaster
2016-10-11 14:21 mkv Status reviewed => tested
2016-10-11 14:21 mkv Test case number => Not needed
2016-10-20 15:13 apn Changeset attached => occt master b88b0cf7
2016-10-20 15:13 apn Assigned To bugmaster => apn
2016-10-20 15:13 apn Status tested => verified
2016-10-20 15:13 apn Resolution open => fixed
2016-10-28 21:42 git Note Added: 0059468
2016-12-09 16:30 aiv Status verified => closed
2016-12-09 16:38 aiv Fixed in Version => 7.1.0