0027944: Visualization, V3d_View - filter duplicates within ::AddClipPlane()